--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,119 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/C3"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="C3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/B3"
-        app:layout_constraintTop_toBottomOf="@+id/C2" />
-
-    <Button
-        android:id="@+id/A3"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="A3"
-        app:layout_constraintEnd_toStartOf="@+id/B3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/A2" />
-
-    <Button
-        android:id="@+id/C1"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="C1"
-        app:layout_constraintBottom_toTopOf="@+id/C2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/B1" />
-
-    <Button
-        android:id="@+id/A1"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="A1"
-        app:layout_constraintBottom_toTopOf="@+id/A2"
-        app:layout_constraintEnd_toStartOf="@+id/B1"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/B1"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="B1"
-        app:layout_constraintBottom_toTopOf="@+id/B2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/A2"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="A2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/B2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/C2"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="C2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/B2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/B3"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="B3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/B2" />
-
-    <Button
-        android:id="@+id/B2"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:backgroundTint="#000000"
-        android:text="B2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/info"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Histórico da partida:\n"
+        android:text="Escolher Jogo:"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonTapatan"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonTicTacToe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:capitalize="none"
+        android:contentDescription="Jogo da Velha"
+        android:text="Jogo da Velha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/B3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <!--<ToggleButton
-        android:id="@+id/toggleButton"
+    <Button
+        android:id="@+id/buttonTapatan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Reconhecedor de fala"
-        android:textOff="DESLIGADO"
-        android:textOn="LIGADO"
-        app:layout_constraintBottom_toTopOf="@+id/B1"
+        android:contentDescription="Tapatan"
+        android:text="Tapatan"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
