--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,30 +7,6 @@
     tools:context=".GameActivity">
 
     <Button
-        android:id="@+id/C3_3x3"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/B3_3x3"
-        app:layout_constraintTop_toBottomOf="@+id/C2_3x3"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/A3_3x3"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/B3_3x3"
-        app:layout_constraintTop_toBottomOf="@+id/A2_3x3"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
         android:id="@+id/C1_3x3"
         android:layout_width="110dp"
         android:layout_height="110dp"
@@ -38,8 +14,8 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/C2_3x3"
         app:layout_constraintStart_toEndOf="@+id/B1_3x3"
+        app:layout_constraintTop_toBottomOf="@+id/C2_3x3"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -50,12 +26,36 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/A2_3x3"
         app:layout_constraintEnd_toStartOf="@+id/B1_3x3"
+        app:layout_constraintTop_toBottomOf="@+id/A2_3x3"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/B1_3x3"
+        android:id="@+id/C3_3x3"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/C2_3x3"
+        app:layout_constraintStart_toEndOf="@+id/B3_3x3"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/A3_3x3"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/A2_3x3"
+        app:layout_constraintEnd_toStartOf="@+id/B3_3x3"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/B3_3x3"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:background="@android:color/transparent"
@@ -94,7 +94,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/B3_3x3"
+        android:id="@+id/B1_3x3"
         android:layout_width="110dp"
         android:layout_height="110dp"
         android:background="@android:color/transparent"
@@ -121,7 +121,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/D2_5x5"
+        android:id="@+id/D4_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
@@ -129,7 +129,7 @@
         android:insetBottom="0dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/D3_5x5"
-        app:layout_constraintStart_toEndOf="@+id/C2_5x5"
+        app:layout_constraintStart_toEndOf="@+id/C4_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -147,27 +147,15 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/A5_5x5"
+        android:id="@+id/A1_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/B5_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/A4_5x5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/E5_5x5"
-        android:layout_width="67dp"
-        android:layout_height="67dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/D5_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/E4_5x5"
+        app:layout_constraintEnd_toStartOf="@+id/B1_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/A2_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -178,56 +166,32 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/E2_5x5"
         app:layout_constraintStart_toEndOf="@+id/D1_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/E2_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/A1_5x5"
+        android:id="@+id/E5_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/A2_5x5"
-        app:layout_constraintEnd_toStartOf="@+id/B1_5x5"
+        app:layout_constraintBottom_toTopOf="@+id/E4_5x5"
+        app:layout_constraintStart_toEndOf="@+id/D5_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/A4_5x5"
+        android:id="@+id/A5_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/B4_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/A3_5x5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/E4_5x5"
-        android:layout_width="67dp"
-        android:layout_height="67dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/D4_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/E3_5x5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/E2_5x5"
-        android:layout_width="67dp"
-        android:layout_height="67dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/E3_5x5"
-        app:layout_constraintStart_toEndOf="@+id/D2_5x5"
+        app:layout_constraintBottom_toTopOf="@+id/A4_5x5"
+        app:layout_constraintEnd_toStartOf="@+id/B5_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -238,32 +202,44 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/A3_5x5"
         app:layout_constraintEnd_toStartOf="@+id/B2_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/A3_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/D5_5x5"
+        android:id="@+id/E2_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/C5_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/D4_5x5"
+        app:layout_constraintStart_toEndOf="@+id/D2_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/E3_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/B5_5x5"
+        android:id="@+id/E4_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/C5_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/B4_5x5"
+        app:layout_constraintBottom_toTopOf="@+id/E3_5x5"
+        app:layout_constraintStart_toEndOf="@+id/D4_5x5"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/A4_5x5"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/A3_5x5"
+        app:layout_constraintEnd_toStartOf="@+id/B4_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -274,8 +250,8 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/D2_5x5"
         app:layout_constraintStart_toEndOf="@+id/C1_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/D2_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -286,8 +262,32 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/B2_5x5"
         app:layout_constraintEnd_toStartOf="@+id/C1_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/B2_5x5"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/D5_5x5"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/D4_5x5"
+        app:layout_constraintStart_toEndOf="@+id/C5_5x5"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/B5_5x5"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/B4_5x5"
+        app:layout_constraintEnd_toStartOf="@+id/C5_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -317,19 +317,6 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/C5_5x5"
-        android:layout_width="67dp"
-        android:layout_height="67dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/C4_5x5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
         android:id="@+id/C1_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
@@ -337,33 +324,34 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/C2_5x5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/C2_5x5"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/C5_5x5"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/C4_5x5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/D4_5x5"
+        android:id="@+id/D2_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/C4_5x5"
+        app:layout_constraintStart_toEndOf="@+id/C2_5x5"
         app:layout_constraintTop_toBottomOf="@+id/D3_5x5"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/B4_5x5"
-        android:layout_width="67dp"
-        android:layout_height="67dp"
-        android:background="@android:color/transparent"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/C4_5x5"
-        app:layout_constraintTop_toBottomOf="@+id/B3_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
@@ -374,12 +362,24 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/B3_5x5"
         app:layout_constraintEnd_toStartOf="@+id/C2_5x5"
+        app:layout_constraintTop_toBottomOf="@+id/B3_5x5"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/C2_5x5"
+        android:id="@+id/B4_5x5"
+        android:layout_width="67dp"
+        android:layout_height="67dp"
+        android:background="@android:color/transparent"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/B3_5x5"
+        app:layout_constraintEnd_toStartOf="@+id/C4_5x5"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/C4_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
@@ -392,7 +392,7 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/C4_5x5"
+        android:id="@+id/C2_5x5"
         android:layout_width="67dp"
         android:layout_height="67dp"
         android:background="@android:color/transparent"
@@ -440,7 +440,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/boardView" />
 
-    <com.example.boardgame.BoardView
+    <com.example.boardgame.ui.BoardView
         android:id="@+id/boardView"
         android:layout_width="390dp"
         android:layout_height="390dp"
@@ -454,53 +454,57 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Jogar Novamente"
-        android:paddingLeft="4dp"
-        android:paddingTop="0dp"
-        android:paddingRight="4dp"
-        android:paddingBottom="0dp"
+        android:paddingLeft="12dp"
+        android:paddingTop="2dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="2dp"
         android:text="Jogar\nNovamente"
-        android:textSize="14sp"
+        android:textSize="20sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/C3_3x3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/B3_3x3" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/A1_3x3"
+        app:layout_constraintTop_toBottomOf="@+id/B1_3x3"
+        android:backgroundTint="#000000"
+        app:cornerRadius="200dp" />
 
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="Voltar ao menu"
-        android:paddingLeft="4dp"
-        android:paddingTop="0dp"
-        android:paddingRight="4dp"
-        android:paddingBottom="0dp"
+        android:paddingLeft="12dp"
+        android:paddingTop="2dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="2dp"
         android:text="Voltar\nao menu"
-        android:textSize="14sp"
+        android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/A3_3x3"
-        app:layout_constraintTop_toBottomOf="@+id/B3_3x3" />
+        app:layout_constraintEnd_toStartOf="@+id/C1_3x3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/B1_3x3"
+        android:backgroundTint="#000000"
+        app:cornerRadius="200dp" />
 
     <TextView
         android:id="@+id/gameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Game Name"
-        android:textSize="32sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toTopOf="@+id/boardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#000000" />
 
     <TextView
-        android:id="@+id/result"
+        android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result"
+        android:text="status"
         android:textSize="24sp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/boardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
